# ExpenseTracker

./: .gitignore  .pylintrc  .python-version  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_tests.py  requirements_tests.txt
.github/workflows/: dynamic_tests.yaml
alembic/: env.py
alembic/versions/: 08290ef9350a_changed_expense_to_transaction_table_.py  65dd6b98e39b_initial_migration.py
app/: main.py
app/api/: exception_handlers.py
app/api/endpoints/: expenses.py  transaction.py
app/core/: database.py
app/models/: expense.py  transaction.py  user.py
app/schemas/: expense.py  transaction.py  user.py
tests/: test_endpoint_transaction.py
